--- a/src/app/index.css
+++ b/src/app/index.css
@@ -73,9 +73,11 @@
   .collapsibleDropdown {
     overflow: hidden;
   }
+
   .collapsibleDropdown[data-state='open'] {
     animation: slideDown 200ms ease-out;
   }
+
   .collapsibleDropdown[data-state='closed'] {
     animation: slideUp 200ms ease-out;
   }
@@ -84,6 +86,7 @@
     from {
       height: 0;
     }
+
     to {
       height: var(--radix-collapsible-content-height);
     }
@@ -93,6 +96,7 @@
     from {
       height: var(--radix-collapsible-content-height);
     }
+
     to {
       height: 0;
     }
@@ -101,23 +105,61 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply min-h-svh w-full bg-background text-foreground;
   }
+
   body > #root {
     @apply h-svh;
   }
 }
 
 @layer utilities {
+  /* Chrome, Safari, and Opera */
+  ::-webkit-scrollbar {
+    width: 2px;
+    height: 12px;
+    background: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: hsl(var(--foreground));
+    border-radius: 1ex;
+  }
+
+  ::-webkit-scrollbar-corner {
+    background: hsl(var(--foreground));
+  }
+
+  /* Firefox */
+  @-moz-document url-prefix() {
+    * {
+      scrollbar-width: thin; /* Set the scrollbar width */
+      scrollbar-color: hsl(var(--foreground)) transparent; /* Thumb color and track color */
+    }
+  }
+
+  /* General adjustments for all browsers */
+  ::-webkit-scrollbar-thumb:horizontal {
+    width: 2px;
+  }
+
+  ::-webkit-scrollbar-thumb:vertical {
+    height: 12px;
+  }
+
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
     display: none;
   }
+
   /* Hide scrollbar for IE, Edge and Firefox */
   .no-scrollbar {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
   }
 
   .faded-bottom {
